// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OutlineButton renders as expected if full width 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--block"
  onClick={[Function]}
  type="button"
>
  
  Test Outline fullWidth Button
</button>
`;

exports[`OutlineButton renders as expected when passing a large size 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--large"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Large Button
</button>
`;

exports[`OutlineButton renders as expected when passing a light skin 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal lab-btn--light"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Light Button
</button>
`;

exports[`OutlineButton renders as expected when passing a magnifying-glass icon 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  <span
    className="lab-icon lab-icon--magnifying-glass lab-icon--white lab-icon--petit lab-btn__icon"
  />
  Test Outline magnifying-glass Button
</button>
`;

exports[`OutlineButton renders as expected when passing disabled as true 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  disabled={true}
  onClick={[Function]}
  type="button"
>
  
  Test Outline Disabled Button 1
</button>
`;

exports[`OutlineButton renders with base props 1`] = `
<button
  className="lab-btn lab-btn--outline lab-btn--normal"
  onClick={[Function]}
  type="button"
>
  
  Test Outline Button
</button>
`;
